Jira 1977, kafka cleaning